# long-run-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSTITUTION_ENFORCEMENT_COMPLETE.md  FOR_NEW_AGENT.md  FUSION_COMPLETION_REPORT.md  FUSION_DESIGN.md  IMPROVEMENT_REPORT.md  INSTALL_GUIDE.md  INTEGRATION_COMPLETE.md  ITERATION_STAGES_IMPLEMENTATION.md  LICENSE  LRA_TEST_REPORT.md  MANIFEST.in  MIGRATION_GUIDE.md  MULTI_PROJECT_GUIDE.md  QUALITY_CHECKER_UPDATE.md  RALPH_LOOP_COMPLETION.md  RALPH_LOOP_GUIDE.md  README-EN.md  README.md  RENAME_REPORT.md  TEST_COVERAGE.md  TEST_ISSUES.md  V3.3.0_PLAN.md  VERIFICATION_REPORT.md  demo_constitution.py  examples_quality_checker.py  index.html  integrate_v4.py  package.json  pyproject.toml  setup.py  test_ralph_loop_integration.py  verify_implementation.md
.github/workflows/: publish.yml
.long-run-agent/templates/: task.yaml
.opencode/plans/: project-analyzer-design.md
docs/: BEADS_INSPIRED_ENHANCEMENTS.md  BOOTSTRAPPING.md  CONSTITUTION_COMPLETE.md  CONSTITUTION_DESIGN.md  CONSTITUTION_ENFORCEMENT.md  CONSTITUTION_IMPROVEMENT_REPORT.md  DEVELOPMENT_STANDARDS.md  FOR_NEW_AGENT.md  IMPLEMENTATION_GUIDE.md  INSTALL_GUIDE.md  MIGRATION_GUIDE.md  MODULES.md  PUBLISH_BEHAVIOR.md  QUICK_START.md  agent-relay-design.md  quality_checker_v2.md
docs/design/: AGENTS_MD_IMPROVEMENT.md  AGENTS_MD_IMPROVEMENT_CHECKER.md  DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN.md  QUERY_ENGINE_ARCHITECTURE.md
docs/files/: bin_lra_js.md  demo_constitution_py.md  examples_demo_constitution_py.md  examples_examples_quality_checker_py.md  examples_quality_checker_py.md  integrate_v4_py.md  long_run_agent___init___py.md  long_run_agent___main___py.md  long_run_agent_batch_lock_manager_py.md  long_run_agent_cli_py.md  long_run_agent_config_py.md  long_run_agent_locks_manager_py.md  long_run_agent_project_analyzer_py.md  long_run_agent_records_manager_py.md  long_run_agent_rwlock_py.md  long_run_agent_system_check_py.md  long_run_agent_task_manager_py.md  long_run_agent_template_manager_py.md  long_run_agent_tips_py.md  lra___init___py.md  lra___main___py.md  lra_batch_lock_manager_py.md  lra_browser_automation_py.md  lra_cli_extensions_py.md  lra_cli_py.md  lra_config_py.md  lra_constitution_py.md  lra_doctor_py.md  lra_errors_py.md  lra_guide_py.md  lra_locks_manager_py.md  lra_parsers_py.md  lra_project_analyzer_py.md  lra_quality_checker_py.md  lra_records_manager_py.md  lra_regression_test_py.md  lra_rwlock_py.md  lra_system_check_py.md  lra_task_manager_py.md  lra_template_manager_py.md  (+26 more)
docs/iteration/: ITERATION_GUIDANCE_FINAL_REPORT.md  ITERATION_GUIDANCE_QUICK_START.md
long_run_agent/: __init__.py  __main__.py  batch_lock_manager.py  cli.py  code_checker.py  config.py  feature_manager.py  installer.py  locks_manager.py  operation_logger.py  progress_tracker.py  project_analyzer.py  records_manager.py  registry.py  resource_coordinator.py  rwlock.py  session_manager.py  session_orchestrator.py  spec_manager.py  status_manager.py  system_check.py  task_manager.py  template_manager.py  tips.py  upgrade_manager.py
lra/: __init__.py  __main__.py  batch_lock_manager.py  browser_automation.py  cli.py  cli_extensions.py  config.py  constitution.py  doctor.py  errors.py  guide.py  locks_manager.py  parsers.py  project_analyzer.py  quality_checker.py  records_manager.py  regression_test.py  rwlock.py  system_check.py  task_manager.py  template_manager.py
scripts/: BENCHMARK_RESULTS.md  benchmark.py  benchmark_results.json  check-python.js  install.sh  integrate_v4.py  ralph-agent-loop.sh  verify-install.sh  verify_constitution.py
tests/: test_cli_force_next_stage.py  test_constitution.py  test_constitution_enforcement.py  test_doctor.py  test_force_next_stage.py  test_quality_checker.py  test_ralph_config.py  test_ralph_integration.py  test_ready.py  test_v4_fixes.py  test_v5_fixes.py
(+32 files in other folders)
