[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lra"
version = "4.0.0"
description = "A powerful framework for managing long-running AI Agent tasks with quality assurance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "LRA Contributors"}
]
dependencies = [
    "jinja2>=3.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
full = ["pytest>=7.0", "playwright>=1.40.0"]

[project.scripts]
lra = "lra.cli:main"

[project.urls]
Homepage = "https://github.com/clawdbot-ai/long-run-agent"
Documentation = "https://github.com/clawdbot-ai/long-run-agent#readme"
Repository = "https://github.com/clawdbot-ai/long-run-agent"
Issues = "https://github.com/clawdbot-ai/long-run-agent/issues"

[tool.setuptools]
packages = ["lra"]

[tool.setuptools.package-data]
lra = ["py.typed", "prompts/*.md"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
